Fix CSS Grid layout for section-C

--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -27,27 +27,6 @@
 
     <!-- Main Area -->
     <main id="main">
-      <!-- Section A-->
-      <section id="section-a" class="grid">
-        <div class="content-wrap">
-          <h2 class="content-title">Portfolio Senior Award History and Benefits from BC</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, totam! Possimus sint assumenda iure ex illo excepturi iste nihil vel! Minus laudantium deserunt laborum aperiam eius! Excepturi, debitis dolor veniam, recusandae delectus, temporibus repellat aspernatur dicta necessitatibus saepe ipsum incidunt?
-          </p>
-        </div>
-        <div class="container">
-          <div class="avatar-flip">
-            <img src="./assets/images/headshot.jpg" height="150" width="150">
-            <img src="./assets/images/Graduate_pic.jpg" height="150" width="150">
-          </div>
-          <h2>Yassine Jaoudi</h2>
-          <h4>www.yjseniorportfolio.com</h4>
-          <p>I would like to invite you to take a look at my online portfolio.</p>
-          <p>I have started working on this website starting from April 7th 2018, it is build from scratch as with HTML, CSS, and Javascript. It comes with the intention of showing my programming, interdisciplinary skills, and eagerness to learn about Technology. </p>
-          <p>If you would like to check the code for this website, the link lives in a file called Front_End in repository on GitHub (my github's can be found at the bottom of this website as you click on the Icon and you will be directed straight to my profile).</p>
-        </div>
-      </section>
-
       <!-- Section B-->
       <section id="section-b" class="grid">
         <ul>
@@ -79,6 +58,28 @@
             </li>
         </ul>  
       </section>
+      
+
+      <!-- Section A-->
+      <section id="section-a" class="grid">
+        <!-- <div class="content-wrap">
+          <h2 class="content-title">Portfolio Senior Award History and Benefits from BC</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, totam! Possimus sint assumenda iure ex illo excepturi iste nihil vel! Minus laudantium deserunt laborum aperiam eius! Excepturi, debitis dolor veniam, recusandae delectus, temporibus repellat aspernatur dicta necessitatibus saepe ipsum incidunt?
+          </p>
+        </div> -->
+        <div class="container">
+          <div class="avatar-flip">
+            <img src="./assets/images/headshot.jpg" height="150" width="150">
+            <img src="./assets/images/Graduate_pic.jpg" height="150" width="150">
+          </div>
+          <h2>Yassine Jaoudi</h2>
+          <h4>www.yjseniorportfolio.com</h4>
+          <p>I would like to invite you to take a look at my online portfolio.</p>
+          <p>I have started working on this website starting from April 7th 2018, it is build from scratch as with HTML, CSS, and Javascript. It comes with the intention of showing my programming, interdisciplinary skills, and eagerness to learn about Technology. </p>
+          <p>If you would like to check the code for this website, the link lives in a file called Front_End in repository on GitHub (my github's can be found at the bottom of this website as you click on the Icon and you will be directed straight to my profile).</p>
+        </div>
+      </section>
 
 
       <!--Section C -->
@@ -93,9 +94,9 @@
                   <p class="album__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, dolorem?</p>
                 </div>
               </div> 
-             <div class="section resume">
+             <div class="section-2">
                <h3 class="section-title">Section-2: Resume</h3>
-               <div class="album">
+               <div class="resume">
                 <img src="./assets/images/Resume.png" alt="" height = "200" width ="300">
                 <div class="album__details">
                   <h3>Album Title</h3>
