--- a/Portfolio_Website/index.html
+++ b/Portfolio_Website/index.html
@@ -19,7 +19,8 @@
       <div class= "content-wrap">
           <h1>Welcome To My Portfolio</h1>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat architecto commodi hic tempora tenetur voluptatem exercitationem optio nobis explicabo quidem doloribus, omnis id mollitia dolorem, maiores est, fugiat assumenda. In.
+            <q>Of all the things that can boost emotions, motivation, and perceptions during a workday, the single most important is making progress in meaningful work.</q>
+            By Teresa Amabile
           </p>
           <a href="#section-b" class="btn">Read more</a>
       </div>
@@ -127,7 +128,7 @@
                   </a>
                     <div class="album__details">
                       <h3>School of Honors Induction Ceremony</h3>
-                      <p class="album__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, dolorem?</p>
+                      <p class="album__desc">Benedict College School of Honors have directed me toward my specific interest by making my classes as honor that I have to fullfil 24 credit hours and to do so I worked on projects that gave me hands on and deep understanding of the specific course.</p>
                     </div>
                   </div>
                   <div class="album">
@@ -136,7 +137,7 @@
                     </a>
                     <div class="album__details">
                       <h3>Presidential Trophy Picture with our President Dr. Roslyn Clark Artis</h3>
-                      <p class="album__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, dolorem?</p>
+                      <p class="album__desc">Such an honor to recieve this award from our President.</p>
                     </div>
                   </div>
                   <div class="album"> 
@@ -145,7 +146,7 @@
                     </a>
                     <div class="album__details">
                       <h3>Plasma Physics Researcher at Lawrence Livermore National Labroatory</h3>
-                      <p class="album__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, dolorem?</p>
+                      <p class="album__desc">In this experience, I learned about Plasma physics and run different simulations and experiements that have helped me to build my research, simulation, and experimental skills.</p>
                     </div>
                   </div>
                   <div class="album">
@@ -154,11 +155,11 @@
                     </a>
                     <div class="album__details">
                       <h3>Benedict SURI Data Acquisition using LabVIEW Poster Presentation</h3>
-                      <p class="album__desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt, dolorem?</p>
+                      <p class="album__desc"></p>
                     </div>
                   </div><div class="album"> 
-                    <a href="./assets/images/" target="new">
-                      <img class = "album__artwork" src="./assets/images/" alt="" height="300" width="300"> 
+                    <a href="./assets/images/SURI_certificate.JPG" target="new">
+                      <img class = "album__artwork" src="./assets/images/SURI_certificate.JPG" alt="" height="300" width="300"> 
                     </a>
                     <div class="album__details">
                       <h3>Summer undergraduate Research Institute Successful Completion Certificate</h3>
@@ -166,8 +167,8 @@
                     </div>
                   </div>
                   <div class="album">
-                    <a href="./assets/images/" target="new">
-                      <img class="album__artwork" src="./assets/images/" alt="" height="300" width="300">
+                    <a href="./assets/images/NSCS_Certificate.JPG" target="new">
+                      <img class="album__artwork" src="./assets/images/NSCS_Certificate.JPG" alt="" height="300" width="300">
                     </a>
                     <div class="album__details">
                       <h3>National Society of Collegiate Scholars Induction Certificate</h3>
@@ -251,8 +252,8 @@
                     </div>
                   </div>
                   <div class="album">
-                    <a href="./assets/images/"></a target="new">
-                      <img class="album__artwork" src="./assets/images/" alt="" height="300" width="300">
+                    <a href="./assets/images/Afrotech.png" target="new">
+                      <img class="album__artwork" src="./assets/images/Afrotech.png" alt="" height="300" width="300">
                     </a>
                     <div class="album__details">
                       <h3>AfroTech Conference Badge in San Fransisco, CA</h3>
@@ -268,8 +269,8 @@
                     </div>
                   </div>
                   <div class="album">
-                    <a href="./assets/images/" target="new">
-                      <img class="album__artwork" src="./assets/images/" alt="" height="300" width="300">
+                    <a href="./assets/images/RP_Letter.JPG" target="new">
+                      <img class="album__artwork" src="./assets/images/RP_Letter.JPG" alt="" height="300" width="300">
                     </a>
                     <div class="album__details">
                       <h3>Richland Penny Internship Program Acceptance Letter</h3>
@@ -277,8 +278,8 @@
                     </div>
                   </div>
                   <div class="album"> 
-                    <a href="./assets/images/" target="new">
-                      <img class = "album__artwork" src="./assets/images/" alt="" height="300" width="300">
+                    <a href="./assets/images/NSBE_43th.png" target="new">
+                      <img class = "album__artwork" src="./assets/images/NSBE_43th.png" alt="" height="300" width="300">
                     </a> 
                     <div class="album__details">
                       <h3>NSBE 43rd Conference Particitipation badge picture in kansas City, Missouri</h3>
@@ -286,8 +287,8 @@
                     </div>
                   </div>
                   <div class="album">
-                    <a href="./assets/images/" target="new">
-                      <img class="album__artwork" src="./assets/images/" alt="" height="300" width="300">
+                    <a href="./assets/images/NSBE_44th.png" target="new">
+                      <img class="album__artwork" src="./assets/images/NSBE_44th.png" alt="" height="300" width="300">
                     </a>
                     <div class="album__details">
                       <h3>NSBE 44th Conference Particitipation badge picture in kansas City, Missouri</h3>
