--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
             in helping to increase the number of minority students in engineering.
             <br><br>Fun Fact: Hover over with the cursor this container to see the transition of my picture!
           </p>
+          <!-- <h4>www.yassinejaoudi.github.io</h4> -->
+          <!-- <p> -->
+            <!-- I would like to invite you to take a look at my online portfolio. -->
+          <!-- </p> -->
+          <!-- <p> -->
+            <!-- I have started working on this website starting from April 2nd 2018, it is build from scratch as with HTML, CSS, and Javascript. -->
+            <!-- It comes with the intention of showing my programming, interdisciplinary skills, and eagerness to learn about Technology. -->
+          <!-- </p> -->
+          <!-- <p> -->
+            <!-- If you would like to check the code for this website, it lives in a file called yassinejaoudi.github.io in repositoryon GitHub (my -->
+             <!-- github' can be found in the footer of this website as you click on the icon and you will be directed straight to my profile). -->
+          <!-- </p> -->
         </div>
       </section>
 
