--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="x-UA-Compatible" content = "ie=edge">
     <title>Senior Award Portfolio</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
-    <link rel="stylesheet" href="../assets/bottom_style.css">
+    <link rel="stylesheet" href="./assets/bottom_style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </head>
   <body>
@@ -107,8 +107,8 @@
               <h3 class="section-title">Section-1: Cover Sheet</h3>
               <div class="cover-sheet">
                   <div class="container-img">
-                    <a href="./assets/images/Cover-sheet-test.png" target="new">
-                      <img src="./assets/images/Cover-sheet-test.png" alt="" height = "400" width ="400">
+                    <a href="./assets/images/Cover-sheet.jpg" target="new">
+                      <img src="./assets/images/Cover-sheet.jpg" alt="" height = "400" width ="400">
                     </a>
                   </div>
                 <div class="album__details">
@@ -492,24 +492,24 @@
                     <h3>Total Service Learning hours</h3>
                     <p class="album__desc"></p>
                   </div>
-                </div><div class="album">
-                  <a href="./assets/images/" target="new">
-                    <img class="album__artwork" src="./assets/images/" alt="" height="300" width="300">
-                  </a>
-                  <div class="album__details">
-                    <h3></h3>
-                    <p class="album__desc"></p>
-                  </div>
-                </div>
-                <div class="album"> 
-                  <a href="./assets/images/" target="new">
-                  <img class = "album__artwork" src="./assets/images/" alt="" height="300" width="300"> 
-                </a>
-                    <div class="album__details">
-                    <h3></h3>
-                    <p class="album__desc"></p>
-                  </div>
-                </div>
+                <!-- </div><div class="album"> -->
+                  <!-- <a href="./assets/images/" target="new"> -->
+                    <!-- <img class="album__artwork" src="./assets/images/" alt="" height="300" width="300"> -->
+                  <!-- </a> -->
+                  <!-- <div class="album__details"> -->
+                    <!-- <h3></h3> -->
+                    <!-- <p class="album__desc"></p> -->
+                  <!-- </div> -->
+                <!-- </div> -->
+                <!-- <div class="album">  -->
+                  <!-- <a href="./assets/images/" target="new"> -->
+                  <!-- <img class = "album__artwork" src="./assets/images/" alt="" height="300" width="300">  -->
+                <!-- </a> -->
+                    <!-- <div class="album__details"> -->
+                    <!-- <h3></h3> -->
+                    <!-- <p class="album__desc"></p> -->
+                  <!-- </div> -->
+                <!-- </div> -->
             </div>
         </div>
       </section>
