--- a/index.html
+++ b/index.html
@@ -467,15 +467,16 @@
                     <!-- <p class="album__desc"></p> -->
                   <!-- </div> -->
                 <!-- </div> -->
-                <div class="album"> 
-                <a href="./assets/images/2017_River_Sweep.png" target="new">
-                  <img class = "album__artwork" src="./assets/images/2017_River_Sweep.png" alt="" height="300" width="300"> 
-                </a>
-                    <div class="album__details">
-                    <h3>2017 Annual River Sweep community service project with the Gills Creek Watershed Association participation.</h3>
-                    <p class="album__desc"></p>
-                  </div>
-                </div><div class="album">
+                <!-- <div class="album">  -->
+                <!-- <a href="./assets/images/2017_River_Sweep.png" target="new"> -->
+                  <!-- <img class = "album__artwork" src="./assets/images/2017_River_Sweep.png" alt="" height="300" width="300">  -->
+                <!-- </a> -->
+                    <!-- <div class="album__details"> -->
+                    <!-- <h3>2017 Annual River Sweep community service project with the Gills Creek Watershed Association participation.</h3> -->
+                    <!-- <p class="album__desc"></p> -->
+                  <!-- </div> -->
+                <!-- </div> -->
+                <div class="album">
                   <a href="./assets/images/2016_River_Sweep.png" target="new">
                     <img class="album__artwork" src="./assets/images/2016_River_Sweep.png" alt="" height="300" width="300">
                   </a>
